--- a/static/pages/start.html
+++ b/static/pages/start.html
@@ -1,12 +1,12 @@
 <h1 class="title">AI Eco Check</h1>
 <p class="desc-text">Welkom bij de AI Eco Check. Deze tool helpt je bij het kiezen van een duurzaam AI-model. Kies een van de volgende opties om te beginnen:</p>
 <div class="button-container">
-  <a href="/model" class="ro-button">
+  <a class="ro-button" id="specific-model">
     Ik heb een specifiek model in gedachten
   </a>
 </div>
-<div class="button-container">
-  <a href="/model" class="ro-button">
+<div class="button-container" id="goal">
+  <div class="ro-button">
     Ik heb een doel in gedachten zonder specifiek model
-  </a>
+  </div>
 </div>
