--- a/static/home.html
+++ b/static/home.html
@@ -6,6 +6,7 @@
     <title>AI Eco Check</title>
     <link rel="stylesheet" href="/static/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <link id="page-stylesheet" rel="stylesheet" href="">
     <script src="static/home.js" defer></script>
 </head>
