--- a/static/home.html
+++ b/static/home.html
@@ -6,7 +6,6 @@
     <title>AI Eco Check</title>
     <link rel="stylesheet" href="/static/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <link id="page-stylesheet" rel="stylesheet" href="">
     <script src="static/home.js" defer></script>
 </head>
@@ -20,15 +19,15 @@
     <nav class="progress">
         <div class="step">
             <img src="static/images/icons/rijkshuisstijl/info.svg" alt="Step 1 Icon" class="step-icon">
-            <span class="step-text">Start</span>
+            <span class="step-text">Step 1</span>
         </div>
         <div class="step">
             <img src="static/images/icons/rijkshuisstijl/info.svg" alt="Step 2 Icon" class="step-icon">
-            <span class="step-text">Choose Flow</span>
+            <span class="step-text">Step 2</span>
         </div>
         <div class="step">
             <img src="static/images/icons/rijkshuisstijl/info.svg" alt="Step 3 Icon" class="step-icon">
-            <span class="step-text">Select Model</span>
+            <span class="step-text">Step 3</span>
         </div>
     </nav>
 
