Add multiple pages

--- a/static/home.html
+++ b/static/home.html
@@ -17,17 +17,19 @@
 
     <!-- Progress Indicator -->
     <nav class="progress">
-        <div class="step">
-            <img src="static/images/icons/rijkshuisstijl/info.svg" alt="Step 1 Icon" class="step-icon">
-            <span class="step-text">Step 1</span>
+        <div class="step active" id="start">
+            <i class="fa fa-map-marker step-icon"></i>
+            <span class="step-text">Start</span>
         </div>
-        <div class="step">
-            <img src="static/images/icons/rijkshuisstijl/info.svg" alt="Step 2 Icon" class="step-icon">
-            <span class="step-text">Step 2</span>
+        <div class="step" id="search">
+            <!-- <img src="static/images/icons/rijkshuisstijl/info.svg" alt="Step 2 Icon" class="step-icon"> -->
+            <i class="fa fa-search step-icon"></i>
+            <span class="step-text">Zoek Model</span>
         </div>
-        <div class="step">
-            <img src="static/images/icons/rijkshuisstijl/info.svg" alt="Step 3 Icon" class="step-icon">
-            <span class="step-text">Step 3</span>
+        <div class="step" id="details">
+            <!-- <img src="static/images/icons/rijkshuisstijl/info.svg" alt="Step 3 Icon" class="step-icon"> -->
+            <i class="fa fa-info step-icon"></i>
+            <span class="step-text">Details</span>
         </div>
     </nav>
 
