--- a/static/pages/category_models.html
+++ b/static/pages/category_models.html
@@ -15,12 +15,12 @@
   <table id="model-table" class="hidden">
       <thead>
           <tr>
-              <th class="name">Model Name</th>
-              <th class="group">Group</th>
-              <th class="task">Task</th>
-              <th class="training">Training Costs</th>
-              <th class="inference">Inference Costs</th>
-              <th class="emissions">Emissions Available</th>
+              <th class="name">Model Naam</th>
+              <th class="group">Groep</th>
+              <th class="task">Taak</th>
+              <th class="training">Training Kosten <br><span class="unit">(CO2eq)</span></th>
+              <th class="inference">Inference Kosten <br><span class="unit">(kWh/1000 prompts)</span></th>
+              <th class="emissions">Emissies Beschikbaar</th>
           </tr>
       </thead>
       <tbody>
