--- a/static/pages/input_output.html
+++ b/static/pages/input_output.html
@@ -7,20 +7,30 @@
   <!-- Inputs Column -->
   <div class="column inputs">
       <h2>Input</h2>
-      <div class="item" onclick="selectInput(this)"><i class="fa fa-font"></i> Text</div>
+      <!-- <div class="item" onclick="selectInput(this)"><i class="fa fa-font"></i> Text</div>
       <div class="item" onclick="selectInput(this)"><i class="fa fa-code"></i> Code</div>
       <div class="item" onclick="selectInput(this)"><i class="fa fa-image"></i> Image</div>
       <div class="item" onclick="selectInput(this)"><i class="fa fa-video-camera"></i> Video</div>
-      <div class="item" onclick="selectInput(this)"><i class="fa fa-file-audio-o"></i> Audio</div>
+      <div class="item" onclick="selectInput(this)"><i class="fa fa-file-audio-o"></i> Audio</div> -->
+      <div class="item" onclick="selectInput(this)">Text</div>
+      <div class="item" onclick="selectInput(this)">Code</div>
+      <div class="item" onclick="selectInput(this)">Image</div>
+      <div class="item" onclick="selectInput(this)">Video</div>
+      <div class="item" onclick="selectInput(this)">Audio</div>
   </div>
 
   <!-- Outputs Column -->
   <div class="column outputs">
       <h2>Output</h2>
-      <div class="item" onclick="selectOutput(this)"><i class="fa fa-font"></i> Text</div>
+      <!-- <div class="item" onclick="selectOutput(this)"><i class="fa fa-font"></i> Text</div>
       <div class="item" onclick="selectOutput(this)"><i class="fa fa-code"></i> Code</div>
       <div class="item" onclick="selectOutput(this)"><i class="fa fa-image"></i> Image</div>
       <div class="item" onclick="selectOutput(this)"><i class="fa fa-video-camera"></i> Video</div>
-      <div class="item" onclick="selectOutput(this)"><i class="fa fa-file-audio-o"></i> Audio</div>
+      <div class="item" onclick="selectOutput(this)"><i class="fa fa-file-audio-o"></i> Audio</div> -->
+      <div class="item" onclick="selectOutput(this)">Text</div>
+      <div class="item" onclick="selectOutput(this)">Code</div>
+      <div class="item" onclick="selectOutput(this)">Image</div>
+      <div class="item" onclick="selectOutput(this)">Video</div>
+      <div class="item" onclick="selectOutput(this)">Audio</div>
   </div>
 </div>
