--- a/static/pages/model_details.html
+++ b/static/pages/model_details.html
@@ -27,9 +27,10 @@
               <thead>
                   <tr>
                       <th>Model</th>
-                      <th>Training Costs</th>
-                      <th>Inference Costs</th>
-                      <th>Stats</th>
+                      <th>Groep</th>
+                      <th>Training kosten</th>
+                      <th>Inference kosten</th>
+                      <!-- <th>Stats</th> -->
                   </tr>
               </thead>
               <tbody id="similar-models-body">
@@ -46,12 +47,14 @@
           <h2>Mileukosten</h2>
       </div>
   
-      <!-- Betrouwbaardheid Informatie Section -->
-      <div class="row betrouwbaarheid-informatie" id="betrouwbaarheid-informatie-section">
-          <h2>Betrouwbaardheid Informatie</h2>
-          <p class="description" id="betrouwbaarheid-description">
-            The reliability of the information provided is based on verified data sources and peer-reviewed publications.
-          </p>
+      <!-- Bron Informatie Section -->
+      <div class="row bron-informatie" id="bron-section">
+          <h2>Bron</h2>
       </div>
+    </div>
+  </div>
+  <div class="button-container">
+    <div class="ro-button next-button" id="next-button">
+      Volgende
     </div>
   </div>
