--- a/static/pages/start.html
+++ b/static/pages/start.html
@@ -1,12 +1,29 @@
-<h1 class="title">AI Eco Check</h1>
-<p class="desc-text">Welkom bij de AI Eco Check. Deze tool helpt je bij het kiezen van een duurzaam AI-model. Kies een van de volgende opties om te beginnen:</p>
-<div class="button-container">
-  <a class="ro-button" id="specific-model">
-    Ik heb een specifiek model in gedachten
-  </a>
-</div>
-<div class="button-container" id="goal">
-  <div class="ro-button">
-    Ik heb een doel in gedachten zonder specifiek model
+<a class="back-button" id="back-button">
+  <i class="fa fa-arrow-left"></i>
+  Naar vorige pagina
+</a>
+
+<!-- Button Container -->
+<div class="buttons-wrapper">
+  <!-- Button 1: Specific Model -->
+  <div class="button-box" id="specific-model">
+    <a class="button-header">
+      Ik heb een specifiek model in gedachten
+    </a>
+    <p class="desc-text">Kies dit als je een bepaald model voor ogen hebt</p>
   </div>
+
+  <!-- Button 2: Goal -->
+  <div class="button-box" id="goal">
+    <div class="button-header">
+      Ik heb een doel in gedachten zonder specifiek model
+    </div>
+    <p class="desc-text">Kies dit als je een algemeen doel hebt</p>
+  </div>
+
+  <!-- Button 3: Own Model -->
+  <div class="button-box own-model" id="own-model">
+    <div class="button-header">
+      Ik wil mijn eigen model toevoegen
+    </div>
 </div>
