Last fixes for demo

--- a/static/pages/welcome.html
+++ b/static/pages/welcome.html
@@ -1,24 +1,39 @@
 <!-- Welcome Text -->
-<h1 class="welcome-text">Welcome to AI Eco Check</h1>
+<h1 class="welcome-text">Welkom bij de AI Eco Check</h1>
     
 <!-- Border box for statistics placeholder -->
 <div class="stats-box">
-  <p>Placeholder for Sustainability Statistics...</p>
+  <div class="stat-item">
+      <span class="stat-number">1,287MWh</span>
+      <p>Benodigde energie voor het trainen van GPT-3</p>
+  </div>
+  <div class="stat-item">
+      <span class="stat-number">552 ton CO2</span>
+      <p>Gelijk aan de uitstoot van GPT-3</p>
+  </div>
+  <div class="stat-item">
+      <span class="stat-number">$191 miljoen</span>
+      <p>Geschatte kosten voor het trainen van Gemini</p>
+  </div>
+  <div class="stat-item">
+      <span class="stat-number">$78 miljoen</span>
+      <p>Geschatte kosten voor het trainen van GPT-4</p>
+  </div>
 </div>
 
 <!-- Questions with input fields -->
 <div class="questions">
   <div class="question">
-    <label for="question1">What is your current energy consumption? (kWh)</label>
-    <input type="text" id="question1" class="input-field">
+    <label for="question1">Welk probleem probeer je op te lossen met AI? Zou iets simpelers ook kunnen werken?</label>
+    <input type="text" id="question1" class="input-field" placeholder="Klik om te typen">
   </div>
   <div class="question">
-    <label for="question2">How much water do you use daily? (liters)</label>
-    <input type="text" id="question2" class="input-field">
+    <label for="question2">Weet je hoeveel energie de AI gedurende zijn hele leven verbruikt, van training tot dagelijks gebruik?</label>
+    <input type="text" id="question2" class="input-field" placeholder="Klik om te typen">
   </div>
   <div class="question">
-    <label for="question3">What is your average waste production? (kg)</label>
-    <input type="text" id="question3" class="input-field">
+    <label for="question3">Waarom denk je dat AI de beste oplossing is voor dit probleem?</label>
+    <input type="text" id="question3" class="input-field" placeholder="Klik om te typen">
   </div>
 </div>
 
