--- a/static/pages/finalize.html
+++ b/static/pages/finalize.html
@@ -3,27 +3,37 @@
   Naar vorige pagina
 </a>
 
-<h2 class="model-header">Chosen model:</h2>
-<p class="task">Task: sub-task</p>
+<h2 class="model-header" id="model-header">Chosen model:</h2>
+<p class="task" id="task">Task:</p>
 
 <div class="container">
   <div class="header">
-      <h1>Tips and considerations for AI</h1>
+      <h1>Tips en Overwegingen voor AI</h1>
   </div>
-  <div class="tips-section">
-      <div class="tip-box">
-          <h2>Tip 1</h2>
-          <a href="#" class="more-link">More</a>
-      </div>
-      <div class="tip-box">
-          <h2>Tip 2</h2>
-          <a href="#" class="more-link">More</a>
-      </div>
-      <div class="tip-box">
-          <h2>Tip 3</h2>
-          <a href="#" class="more-link">More</a>
-      </div>
-  </div>
+  <div class="tips-section" id="tips-section">
+    <div class="tip-box" id="tip1">
+        <h2>Data Levenscyclus Optimalisatie</h2>
+        <p class="description">
+            Tabulaire gegevens zijn vaak gestructureerd en groot, vooral in sectoren zoals financiën. Efficiënt beheer van de gegevenslevenscyclus, het verminderen van overbodige opslag en het optimaliseren van gegevenscompressie kan helpen om het energie- en hulpbronnenverbruik te minimaliseren bij het werken met grote databases.
+        </p>
+        <a class="more-link" onclick="toggleText()">Meer</a>
+    </div>
+    <div class="tip-box" id="tip2">
+        <h2>Adaptief Leren</h2>
+        <p class="description">
+            In omgevingen met tabulaire gegevens, waar vaak nieuwe datastromen binnenkomen, kunnen adaptieve leeralgoritmen die de leersnelheid en architectuur dynamisch aanpassen, over-parameterisatie en onnodige hertraining voorkomen, wat de energie-efficiëntie verbetert.
+        </p>
+        <a class="more-link" onclick="toggleText()">Meer</a>
+    </div>
+    <div class="tip-box" id="tip3">
+        <h2>Cloud Diensten</h2>
+        <p class="description">
+            Modellen voor tabulaire gegevens die worden ingezet op clouddiensten kunnen gebruik maken van energie-efficiënte cloudplatforms zoals AWS of Azure, die middelen dynamisch kunnen schalen op basis van de vraag, waardoor het energieverbruik in rusttoestand wordt verminderd.
+        </p>
+        <a class="more-link" onclick="toggleText()">Meer</a>
+    </div>
+</div>
+
 </div>
 
 <div class="button-container">
