tips and tricks

--- a/static/home.html
+++ b/static/home.html
@@ -15,28 +15,30 @@
     </script>
 </head>
 <body>
-    <!-- Header with Company Logo -->
-    <header>
-        <img src="static/images/RO_Logo_online_pos_nl.svg" alt="Company Logo" id="company-logo">
-    </header>
+    <div class="top-bar">
+        <!-- Header with Company Logo -->
+        <header>
+            <img src="static/images/RO_Logo_online_pos_nl.svg" alt="Company Logo" id="company-logo">
+        </header>
 
-    <!-- Progress Indicator -->
-    <nav class="progress">
-        <div class="step active" id="start">
-            <i class="fa-solid fa-location-dot step-icon"></i>
-            <span class="step-text">Start</span>
-        </div>
-        <div class="step" id="search">
-            <!-- <img src="static/images/icons/rijkshuisstijl/info.svg" alt="Step 2 Icon" class="step-icon"> -->
-            <i class="fa fa-search step-icon"></i>
-            <span class="step-text">Zoek Model</span>
-        </div>
-        <div class="step" id="details">
-            <!-- <img src="static/images/icons/rijkshuisstijl/info.svg" alt="Step 3 Icon" class="step-icon"> -->
-            <i class="fa-solid fa-circle-info step-icon"></i>
-            <span class="step-text">Details</span>
-        </div>
-    </nav>
+        <!-- Progress Indicator -->
+        <nav class="progress">
+            <div class="step active" id="start">
+                <i class="fa-solid fa-location-dot step-icon"></i>
+                <span class="step-text">Start</span>
+            </div>
+            <div class="step" id="search">
+                <!-- <img src="static/images/icons/rijkshuisstijl/info.svg" alt="Step 2 Icon" class="step-icon"> -->
+                <i class="fa fa-search step-icon"></i>
+                <span class="step-text">Zoek Model</span>
+            </div>
+            <div class="step" id="details">
+                <!-- <img src="static/images/icons/rijkshuisstijl/info.svg" alt="Step 3 Icon" class="step-icon"> -->
+                <i class="fa-solid fa-circle-info step-icon"></i>
+                <span class="step-text">Details</span>
+            </div>
+        </nav>
+    </div>
 
     <!-- Dynamic Content Section -->
     <div id="content">
