--- a/static/pages/input_output.html
+++ b/static/pages/input_output.html
@@ -34,3 +34,9 @@
       <div class="item" onclick="selectOutput(this)">Audio</div>
   </div>
 </div>
+
+<div class="button-container">
+  <div class="ro-button next-button disabled" id="next-button">
+    Volgende
+  </div>
+</div>
