--- a/static/pages/welcome.html
+++ b/static/pages/welcome.html
@@ -37,9 +37,16 @@
   </div>
 </div>
 
-<!-- Placeholder button for next page -->
+
 <div class="button-container">
-  <div class="ro-button next-button not-selected" id="next-button">
+
+  <div class="ro-button introduction-button" id="introduction-button">
+    <i class="fa-solid fa-circle-info"></i>
+    Introductie tot AI 
+  </div>
+
+  <div class="ro-button next-button" id="next-button">
     Volgende
   </div>
+
 </div>
