fix navigation stack

--- a/static/pages/introduction.html
+++ b/static/pages/introduction.html
@@ -3,7 +3,21 @@
   Naar vorige pagina
 </a>
 
-<div class="ai-sustainability">
+<div class="text-container">
+  <h2 class="header">Wat is AI?</h2>
+  <p>
+    [placeholder]
+  </p>
+</div>
+
+<div class="text-container">
+  <h2 class="header">Verschil tussen AI en GenAI</h2>
+  <p>
+    [placeholder]
+  </p>
+</div>
+
+<div class="text-container">
   <h2 class="header">Duurzaamheid van AI</h2>
   <p>
     De duurzaamheid van AI is een belangrijk onderwerp. AI kan namelijk veel energie verbruiken. Dit komt doordat AI-modellen veel data nodig hebben om te trainen. Het trainen van een AI-model kan daarom veel energie kosten. Dit is slecht voor het milieu en kan ook duur zijn. Daarom is het belangrijk om te kijken naar manieren om AI duurzamer te maken.
