--- a/static/pages/task_details.html
+++ b/static/pages/task_details.html
@@ -27,10 +27,10 @@
     </div>
 
     <div class="info-row">
-      <i class="fas fa-lightbulb"></i>
+      <i class="fa-solid fa-mobile-screen"></i>
       <div class="info-text">
-        <h3>Mean Equivalent in Lightbulbs</h3>
-        <p id="eq-value">5 hours</p>
+        <h3>Equivalent telefoon ladingen</h3>
+        <p id="eq-value"></p>
       </div>
     </div>
   </div>
