fixes voor pilot testing

--- a/static/pages/category_models.html
+++ b/static/pages/category_models.html
@@ -16,8 +16,9 @@
       <thead>
           <tr>
               <th class="name">Model Naam</th>
-              <th class="group">Groep</th>
-              <th class="task">Taak</th>
+              <th class="group">Maker</th>
+              <th class="category">Categorie</th>
+              <th class="task">Sub-Taak</th>
               <th class="training">Training Kosten <br><span class="unit">(CO2eq)</span></th>
               <th class="inference">Inference Kosten <br><span class="unit">(kWh/1000 prompts)</span></th>
               <th class="emissions">Emissies Beschikbaar</th>
