--- a/static/pages/model_details.html
+++ b/static/pages/model_details.html
@@ -27,10 +27,9 @@
               <thead>
                   <tr>
                       <th>Model</th>
-                      <th>Groep</th>
+                      <th>Maker</th>
                       <th>Training kosten</th>
                       <th>Inference kosten</th>
-                      <!-- <th>Stats</th> -->
                   </tr>
               </thead>
               <tbody id="similar-models-body">
