--- a/static/pages/task_details.html
+++ b/static/pages/task_details.html
@@ -4,10 +4,16 @@
 </a>
 
 <div class="task-details" id="task-details">
+
   <div class="task-description" id="task-description">
     <h1 id="title"></h1>
     <p id="description"></p>
+    <div class="model-overview-button ro-button" id="model-overview-button">
+      <p id="button-text"></p>
+      <i class="fa-solid fa-arrow-right"></i>
+    </div>
   </div>
+
   <div class="inference-info" id="inference-info">
     <h2>Inference Information (x1000 prompts)</h2>
     <div class="info-row">
