small fixes for pilot

--- a/static/pages/category_models.html
+++ b/static/pages/category_models.html
@@ -3,7 +3,7 @@
   Naar vorige pagina
 </a>
 
-<h1 id="page-title"></h1>
+<h1 class="page-title" id="page-title"></h1>
 
 <div class="loading" id="loading">
   <div class="spinner"></div>
