--- a/static/pages/welcome.html
+++ b/static/pages/welcome.html
@@ -1,6 +1,9 @@
-<!-- Welcome Text -->
-<h1 class="welcome-text">Welkom bij de AI Eco Check</h1>
-    
+
+<div class="welcome">
+  <h1 class="welcome-text">Welkom bij de AI Eco Check</h1>
+  <p>Welkom bij de AI Eco Check, onderdeel van de AI impact assessment, en bedoeld om overheidsmedewerkers meer bewust te maken van de duurzaamheid van kunstmatige intelligentie. Het doel is om zowel beginnende als ervaren gebruikers te helpen bij het leren over en/of selecteren van AI-modellen en hun impact op duurzaamheid.</p>
+</div>
+
 <!-- Border box for statistics placeholder -->
 <div class="stats-box">
   <div class="stat-item">
