Add database support, new welcome page, favicon

--- a/static/home.html
+++ b/static/home.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Eco Check</title>
     <link rel="stylesheet" href="/static/home.css">
+    <link rel="icon" href="static/images/RO_kroon.ico" type="image/x-icon">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link id="page-stylesheet" rel="stylesheet" href="">
     <script src="static/home.js" defer></script>
-    <script type="module">
-        import { co2, hosting, averageIntensity, marginalIntensity } from "https://cdn.jsdelivr.net/npm/@tgwf/co2@latest/dist/esm/index.js";
-        const avgIntensity = averageIntensity;
-    </script>
+
 </head>
 <body>
     <div class="top-bar">
