--- a/static/pages/category_models.html
+++ b/static/pages/category_models.html
@@ -3,6 +3,7 @@
   Naar vorige pagina
 </a>
 
+<div id="wrapper">
 <h1 class="page-title" id="page-title"></h1>
 
 <div class="loading" id="loading">
@@ -71,4 +72,6 @@
   <div class="ro-button next-button not-selected" id="next-button">
     Volgende
   </div>
+</div>
+
 </div>
