New welcome screen

--- a/static/pages/welcome.html
+++ b/static/pages/welcome.html
@@ -1,22 +1,22 @@
 <!-- Welcome Box -->
 <div class="welcome-box">
   <h2 class="welcome-title">Welkom bij de AI Eco Check</h2>
-  <p>Welkom bij de AI Eco Check, onderdeel van de AI Impact Assessment, en bedoeld om overheidsmedewerkers meer bewust te maken van de duurzaamheid van kunstmatige intelligentie. Het doel is om zowel beginnende als ervaren gebruikers te helpen bij het leren over en/of selecteren van AI-modellen en hun impact op duurzaamheid.</p>
+  <p>Welkom bij de AI Eco Check, een initiatief van het ministerie van Infrastructuur en Waterstaat, onderdeel van de AI-Impact Assessment (AIIA). Deze tool helpt overheidsmedewerkers bewust te worden van de duurzaamheid van AI, door informatie te geven over het gebruik en de milieukosten van AI. Het richt zich op zowel beginners als ervaren gebruikers en ondersteunt bij het kiezen en beoordelen van AI-modellen met oog op duurzaamheid.</p>
 </div>
 
 <!-- Statistics Cards -->
 <div class="stats-container">
   <div class="stat-card">
-      <h3>Stat 1</h3>
-      <p>1000</p>
+      <h3>266</h3>
+      <p>Toepassingen voor kunstmatige intelligentie worden er per 2024 gebruikt binnen de Rijksoverheid.</p>
   </div>
   <div class="stat-card">
-      <h3>Stat 2</h3>
-      <p>500</p>
+      <h3>502 ton</h3>
+      <p>Equivalent CO2 was nodig voor het trainen van modellen zoals GPT-3. Dat is equivalent aan de uitstoot van <b>33 Nederlanders</b> in een jaar of <b>650 keer vliegen</b> van Amsterdam naar New York.</p>
   </div>
   <div class="stat-card">
-      <h3>Stat 3</h3>
-      <p>200</p>
+      <h3>4 TwH</h3>
+      <p>Wordt verbruikt per jaar aan datacenters waar AI services op gehost worden. Dat is ongeveer <b>4%</b> van het totaal landelijk energieverbuik.</p>
   </div>
 </div>
 
