remove eigen model

--- a/static/pages/start.html
+++ b/static/pages/start.html
@@ -22,8 +22,8 @@
   </div>
 
   <!-- Button 3: Own Model -->
-  <div class="button-box own-model" id="own-model">
+  <!-- <div class="button-box own-model" id="own-model">
     <div class="button-header">
       Ik wil mijn eigen model toevoegen
-    </div>
+    </div> -->
 </div>
