--- a/static/pages/finalize.html
+++ b/static/pages/finalize.html
@@ -8,29 +8,9 @@
 
 <div class="container">
   <div class="header">
-      <h1>Tips en Overwegingen voor AI</h1>
+      <h1>Tips en Overwegingen</h1>
   </div>
   <div class="tips-section" id="tips-section">
-    <!-- <div class="tip-box" id="tip1">
-        <h2>Data Levenscyclus Optimalisatie</h2>
-        <p class="description">
-        </p>
-        <a class="more-link" onclick="toggleText()">Meer</a>
-    </div>
-    <div class="tip-box" id="tip2">
-        <h2>Adaptief Leren</h2>
-        <p class="description">
-            
-        </p>
-        <a class="more-link" onclick="toggleText()">Meer</a>
-    </div>
-    <div class="tip-box" id="tip3">
-        <h2>Cloud Diensten</h2>
-        <p class="description">
-            
-        </p>
-        <a class="more-link" onclick="toggleText()">Meer</a>
-    </div> -->
 </div>
 
 </div>
