small design changes

--- a/static/pages/model_details.html
+++ b/static/pages/model_details.html
@@ -22,7 +22,7 @@
   
       <!-- Similar Models Section -->
       <div class="row similar-models" id="similar-models-section">
-          <h2>Similar Models (Alternatives)</h2>
+          <h2>Vergelijkbare Modellen</h2>
           <table id="similar-models-table">
               <thead>
                   <tr>
