--- a/static/pages/task_details.html
+++ b/static/pages/task_details.html
@@ -6,7 +6,8 @@
 <div class="task-details" id="task-details">
 
   <div class="task-description" id="task-description">
-    <h1 id="title"></h1>
+    <div id="title-wrapper">
+    </div>
     <p id="description"></p>
     <div class="model-overview-button ro-button" id="model-overview-button">
       <p id="button-text"></p>
