--- a/static/pages/task_details.html
+++ b/static/pages/task_details.html
@@ -16,20 +16,20 @@
   </div>
 
   <div class="inference-info" id="inference-info">
-    <h2>Inference Information (x1000 prompts)</h2>
+    <h2>Inferentie Informatie (x1000 prompts)</h2>
     <div class="info-row">
       <i class="fa-solid fa-bolt"></i>
       <div class="info-text">
         <h3>Inference Mean (kWh)</h3>
-        <p id="mean-value">$0.05</p>
+        <p id="mean-value"></p>
       </div>
     </div>
     
     <div class="info-row">
       <i class="fa-solid fa-plus-minus"></i>
       <div class="info-text">
-        <h3>Inference Std (kWh)</h3>
-        <p id="std-value">$0.01</p>
+        <h3>Inferentie Std (kWh)</h3>
+        <p id="std-value"></p>
       </div>
     </div>
 
